backend/k8s/base/kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: kafka
        image: ubuntu/kafka:3.7-22.04_beta
        ports:
        - containerPort: 9092
        resources:
          requests: { cpu: "500m", memory: "1Gi" }
          limits: { cpu: "1", memory: "2Gi" }
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: default
spec:
  ports:
    - name: broker
      port: 9092
      targetPort: 9092
  selector:
    app: kafka
